--- a/property-rental-main-app/src/app/components/sub-navbar/sub-navbar.component.css
+++ b/property-rental-main-app/src/app/components/sub-navbar/sub-navbar.component.css
@@ -7,3 +7,29 @@
     left: 100%;
     margin-top: -0.125rem;
   }
+
+
+  .calendar-container {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 5px;
+    padding: 10px;
+  }
+  
+  .calendar-header, .calendar-day {
+    text-align: center;
+    padding: 10px;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+  }
+  
+  .calendar-day:hover {
+    background-color: #e0e0e0;
+    cursor: pointer;
+  }
+  
+  .calendar-header {
+    font-weight: bold;
+    background-color: #ddd;
+  }
+  
