--- a/property-rental-main-app/src/app/components/sub-navbar/sub-navbar.component.html
+++ b/property-rental-main-app/src/app/components/sub-navbar/sub-navbar.component.html
@@ -1,39 +1,51 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light z-20">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Brand</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Features
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Feature 1</a></li>
-            <li><a class="dropdown-item" href="#">Feature 2</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#">More Features</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Feature 3</a></li>
-                <li><a class="dropdown-item" href="#">Feature 4</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+<nav class="navbar navbar-expand-lg navbar-light bg-slate-200 z-20 h-14">
+  <div class="flex gap-9 pl-4">
+
+<ul>
+  <li class="nav-item dropdown border ">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      price
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <li><a class="dropdown-item" href="#">$2000</a></li>
+      <li><a class="dropdown-item" href="#">$5334</a></li>
+      <li><a class="dropdown-item" href="#">$3333</a></li>
+      <li><a class="dropdown-item" href="#">$1111</a></li>
+      <li><a class="dropdown-item" href="#">$4222</a></li>
+    </ul>
+  </li>
+</ul>
+
+
+<ul>
+  <li class="nav-item dropdown border ">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Home Type
+
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <li><a class="dropdown-item" href="#">Appartment</a></li>
+      <li><a class="dropdown-item" href="#">House</a></li>
+      <li><a class="dropdown-item" href="#">Condo</a></li>
+      <li><a class="dropdown-item" href="#">TownHomes</a></li>
+    </ul>
+  </li>
+</ul>
+<div class="nav-item dropdown border">
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Move-In Date
+  </a>
+  <div class="dropdown-menu p-3" aria-labelledby="navbarDropdown">
+    <div id="calendar" class="calendar-container">
+      <div class="calendar-header" *ngFor="let day of daysOfWeek">{{ day }}</div>
+      <div *ngFor="let _ of emptyCells"></div>
+      <div *ngFor="let day of daysInMonth" class="calendar-day" (click)="selectDate(day)">
+        {{ day }}
+      </div>
     </div>
   </div>
+</div>
+  </div>
 </nav>
+
+
