--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -1,8 +1,8 @@
 <div class="container mx-auto "(click)="redirectToDetails()" >
-  <div class="flex flex-wrap justify-center gap-4">
+  <div class="">
     <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 p-4" >
       <div class="card bg-white shadow-lg rounded-lg overflow-hidden" >
-        <div class="card-img-top h-48 w-full" routerLink="/propertydetails/{{product.id}}">
+        <div class="card-img-top h-48 w-full">
           <img [src]="product.imageUrl" class="h-full w-full object-cover" alt="">
         </div>
         <div class="card-body p-4">
