--- a/property-rental-main-app/src/app/components/show-property-cards/show-property-cards.component.html
+++ b/property-rental-main-app/src/app/components/show-property-cards/show-property-cards.component.html
@@ -1,4 +1,4 @@
-<div class="apartment-list h-screen flex flex-col gap-3 absolute top-28 right-0 bg-black p-4 rounded-lg overflow-x-auto">
+<div class="apartment-list h-screen flex flex-col gap-3 absolute top-[7.5rem]  right-0 bg-black p-4  overflow-x-auto">
     <input [(ngModel)]="searchText" class="form-control mr-sm-2 w-full" type="search" placeholder="Find your property" aria-label="Search">
    <app-property-cards
      *ngFor="let apartment of products |filterCards:searchText|paginate : { itemsPerPage: pageSize, currentPage }; let i = index"
