--- a/property-rental-main-app/src/app/page/home/home.component.html
+++ b/property-rental-main-app/src/app/page/home/home.component.html
@@ -1,29 +1,37 @@
 <main class="w-full h-full">
-  <section id="page-1" class="" style="background-image: url('assets/images/pexels-pixabay-280221.jpg')">
-    <div class="container">
-      <h1  class="mb-4">Find your perfect place.</h1>
+  <!-- Hero Section -->
+  <section id="page-1" class="bg-cover bg-center h-screen flex items-center justify-center" 
+           style="background-image: url('assets/images/pexels-pixabay-280221.jpg')">
+    <div class="container text-center">
+      <h1 class="text-white text-4xl font-bold mb-4">Find your perfect place.</h1>
       <div class="center">
         <app-search></app-search>
       </div>
     </div>
   </section>
-<div class="pb-5">
-  <h1  class="mb-4">Explore Rentals in Chicago, IL</h1>
-  <div class="cards-container ">
-    <app-card  *ngFor="let card of products" [product]="card"></app-card>
+
+  <!-- Rentals Section -->
+  <div class="pb-10 bg-black-100">
+    <h1 class="text-center text-3xl font-semibold mb-8">Explore Rentals in Chicago, IL</h1>
+    <div class="cards-container">
+      <app-card *ngFor="let card of products" [product]="card" class="p-4 h-80 w-64 "></app-card>
+    </div>
   </div>
-  
-</div>
-  <h1>Renting Made Easy for Residents and Property Managers</h1>
-  <p class="text-yellow-100 font-light text-center text-lg mb-3">
-    Our articles, guides, and videos help you through the process, start to
-    finish.
-  </p>
-  <app-featurette></app-featurette>
-  <section class="flex justify-center">
-    <div class="mt-5 px-5 w-[90vh] gap-9">
-      <h1 class="mb-4">FAQ's</h1>
-      <app-faqs class=""></app-faqs>
+
+  <!-- Information Section -->
+  <div class="text-center my-10">
+    <h1 class="text-3xl font-semibold mb-4">Renting Made Easy for Residents and Property Managers</h1>
+    <p class="text-yellow-600 font-light text-lg mb-3">
+      Our articles, guides, and videos help you through the process, start to finish.
+    </p>
+    <app-featurette></app-featurette>
+  </div>
+
+  <!-- FAQ Section -->
+  <section class="flex justify-center mt-10">
+    <div class="px-5 w-full max-w-5xl">
+      <h1 class="text-2xl font-bold mb-6">FAQ's</h1>
+      <app-faqs></app-faqs>
     </div>
   </section>
 </main>
