--- a/property-rental-main-app/src/app/components/footer/footer.component.html
+++ b/property-rental-main-app/src/app/components/footer/footer.component.html
@@ -22,7 +22,6 @@
             </div>
         </div>
     </section>
-    <div *ngFor="let main of mains" class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
-        {{ main.footerend  || "Not Available"}}
+    <div  class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
     </div>
 </footer>
